OxyMP/libs/oxymp/tests/tokens/incorrect-derives.stderr
error: The token enum must contain at least one variant. Consider adding a variant with `#[exact("your exact string")]` or `#[regex("your regex", path::to::function)]`.
 --> tests/tokens/incorrect-derives.rs:5:6
  |
5 | enum Tok {}
  |      ^^^

error: Tokens can only be derived for enums. Make sure that `#[derive(Tokens)]` is applied to an enum.
 --> tests/tokens/incorrect-derives.rs:9:1
  |
9 | struct Tok2;
  | ^^^^^^

error: Tokens can only be derived for enums. Make sure that `#[derive(Tokens)]` is applied to an enum.
  --> tests/tokens/incorrect-derives.rs:13:1
   |
13 | union Tok3 {
   | ^^^^^
